@@ -8,6 +8,10 @@
 
 Darkbot 7.0-RC7: Mar 13th, 2003
 	
+	- Darkbot will now properly compile on Solaris. To make
+	  this happen, you need to manually edit source/Makefile,
+	  and remove a comment symbol before the word "LIBS".
+
 	- Suppressed a warning message from main.h that happened
 	  when compiling on Solaris. 
 
